import grpcClients from './src/grpc/clients.js';

async function testAuthConnection() {
  console.log('üîç Testing Gateway -> Auth-Service Connection...\n');

  try {
    // Test health check
    console.log('1. Testing Health Check...');
    if (grpcClients.authService && grpcClients.authService.health) {
      const healthResult = await grpcClients.authService.health({});
      console.log('‚úÖ Health check successful:', healthResult);
    } else {
      console.log('‚ùå Health method not available');
    }

    // Test register
    console.log('\n2. Testing Register...');
    if (grpcClients.authService && grpcClients.authService.register) {
      const registerRequest = {
        email: 'test@example.com',
        password: 'password123',
        first_name: 'Test',
        last_name: 'User',
        correlationId: 'test-123',
      };

      const registerResult = await grpcClients.authService.register(registerRequest);
      console.log('‚úÖ Register successful:', registerResult);
    } else {
      console.log('‚ùå Register method not available');
    }

    // Test login
    console.log('\n3. Testing Login...');
    if (grpcClients.authService && grpcClients.authService.login) {
      const loginRequest = {
        email: 'test@example.com',
        password: 'password123',
        correlationId: 'test-456',
      };

      const loginResult = await grpcClients.authService.login(loginRequest);
      console.log('‚úÖ Login successful:', loginResult);
    } else {
      console.log('‚ùå Login method not available');
    }

    // Test validate token
    console.log('\n4. Testing Validate Token...');
    if (grpcClients.authService && grpcClients.authService.validateToken) {
      const validateRequest = {
        token: 'test-token',
        correlationId: 'test-789',
      };

      const validateResult = await grpcClients.authService.validateToken(validateRequest);
      console.log('‚úÖ Validate token successful:', validateResult);
    } else {
      console.log('‚ùå ValidateToken method not available');
    }

    console.log('\nüéâ All tests completed!');
  } catch (error) {
    console.error('‚ùå Test failed:', error);
  }
}

// Run the test
testAuthConnection();
